# hubspot-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
src/hubspot_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  server.py
src/hubspot_mcp/tools/: __init__.py  _base.py  associations.py  automation.py  campaigns.py  email_send.py  engagements.py  forms.py  lists.py  marketing_emails.py  marketing_events.py  misc.py  objects.py  owners.py  pipelines.py  properties.py  subscriptions.py
tests/: conftest.py  test_all_tools.py  test_auth.py  test_client.py  test_config.py  test_health.py  test_marketing.py  test_tools.py
